# libavcodec-rs

./: .gitignore  Cargo.toml  LICENSE
examples/: decode_filter_audio.c  decode_filter_video.c  decode_video.c  demux_decode.c  downsampler.c  downsampler.rs  encode_audio.c  hw_decode.c  keyframe_reader.rs  resample_audio.c  transcode.c  transcode_aac.c
src/: channel_layout.rs  codec.rs  constants.rs  error.rs  ffi.rs  format.rs  frame.rs  io_context.rs  lib.rs  packet.rs  rational.rs  sample.c  stream.rs  swr.rs  sws.rs
sys/: Cargo.toml  build.rs  wrapper.cpp  wrapper.h
